# google-chat-tauri

./: .gitignore  README.md  bun.lockb  index.html  package.json  pnpm-lock.yaml  splash.html  vite.config.ts
.github/workflows/: main.yml
src/: main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
